--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -39,5 +39,11 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 </project>
