--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -66,5 +66,11 @@
             <version>5.1.44</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>4.3.12.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
