--- a/servlet-3.0/pom.xml
+++ b/servlet-3.0/pom.xml
@@ -7,8 +7,20 @@
     <groupId>org.example</groupId>
     <artifactId>servlet-3.0</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-  <dependencies>
+    <dependencies>
       <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina -->
       <dependency>
           <groupId>org.apache.tomcat</groupId>
